*Empty MediaWiki Message*

--- a/ერეკლე_II.mw
+++ b/ერეკლე_II.mw
@@ -1,5 +1,10 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''ერეკლე'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[ერეკლე]]
+|}</small>
+
 [[სურათი:Kakheti-Irakli II.jpg|thumb|ერეკლე II]]
-'''ერეკლე II''' (* [[7 ნოემბერი]]. [[1720]], [[თელავი]] ―     †   [[11 იანვარი]]. [[1798]], იქვე, დაკრძალულია [[მცხეთა | მცხეთაში]], სვეტიცხოვლის ტაძარში), [[1744]]-[[1762]] კახეთის, [[1762]]-98 ქართლ-კახეთის მეფე, [[თეიმურაზ II|თეიმურაზ II-ის]] ძე. ერეკლე II აკავშირებდა ქართლისა და კახეთის [[ბაგრატიონები | ბაგრატიონთა]] ორ შტოს. დედამისი, თამარი, [[ვახტანგ VI|ვახტანგ VI-ის]] ასული იყო, ხოლო მამა, თეიმურაზ II, - კახთა მეფე [[დავით II, იმამყული-ხანი|დავით II-ის]] (იმამყული-ხანი) ძე. 
+'''ერეკლე II''' (* [[7 ნოემბერი]], [[1720]], [[თელავი]] ―     †   [[11 იანვარი]], [[1798]], იქვე, დაკრძალულია [[მცხეთა | მცხეთაში]], სვეტიცხოვლის ტაძარში), [[1744]]-[[1762]] კახეთის, [[1762]]-98 ქართლ-კახეთის მეფე, [[თეიმურაზ II|თეიმურაზ II-ის]] ძე. ერეკლე II აკავშირებდა ქართლისა და კახეთის [[ბაგრატიონები | ბაგრატიონთა]] ორ შტოს. დედამისი, თამარი, [[ვახტანგ VI|ვახტანგ VI-ის]] ასული იყო, ხოლო მამა, თეიმურაზ II, - კახთა მეფე [[დავით II, იმამყული-ხანი|დავით II-ის]] (იმამყული-ხანი) ძე. 
 
 ==პოლიტიკური ვითარება==
 [[1744]] თეიმურაზ II [[ქართლი|ქართლში]] გამეფდა, ერეკლე II კი - [[კახეთი|კახეთში]]. XVIII საუკუნის 40-იანი წლების მიწურულისათვის ნომინალურად [[ირანი|ირანის]] ვასალი ქართლ-კახეთი ფაქტობრივად დამოუკიდებელ სახელმწიფოდ იქცა. ერეკლე II-მ და თეიმურაზ II-მ [[ნადირ-შაჰი|ნადირ-შაჰის]] გარდაცვალების შემდეგ ([[1747]]) [[თბილისი]] [[ირანელები|ირანელებისაგან]] გაათავისუფლეს, თავიანთ ბატონობას დაუმორჩილეს და დახარკეს განჯისა და ერევნის სახანოები. თეიმურაზ II-ის გარდაცვალებასთან დაკავშირებით ([[1762]]) ქართლ-კახეთში ერთმეფობის დამყარება [[საქართველო|საქართველოს]] პოლიტიკური გაერთიანებისაკენ გადადგმული დიდი ნაბიჯი იყო. 
