*Empty MediaWiki Message*

--- a/ელიზბარ_ერისთავი.mw
+++ b/ელიზბარ_ერისთავი.mw
@@ -1,3 +1,8 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''ერისთავი'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[ერისთავი]]
+|}</small>
+
 '''ელიზბარ გიორგის ძე ერისთავი'''  (ერისთვისშვილი) (* [[1738]] ―     † [[1813]]), [[ქართველები|ქართველი]] პოეტი და პოლიტიკური მოღვაწე.
 
 [[ერეკლე II|ერეკლე II-ის]] პოლიტიკის წინააღმდეგი იყო, რისთვისაც გააძევეს ქართლიდან. [[ბესიკი|ბესიკთან]] ერთად დიდი გავლენა ჰქონდა იმერეთის სამეფო კარზე. [[სოლომონ II|სოლომონ II-ის]] დროს იძულებული გახდა იმერეთი დაეტოვებინა. ერისთავი ბესიკის სკოლის წარმომადგენელია. მის ლექსებში გამოხატულია სოციალური და პოლიტიკური პრივილეგიების დაკარგვით გამოწვეული სევდა. მისი პოეტური მემკვიდრეობა დაცულია ხელნაწერების სახით.
