*Empty MediaWiki Message*

--- a/ეროსი_(მითოლოგია).mw
+++ b/ეროსი_(მითოლოგია).mw
@@ -1,3 +1,8 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+||<small>ტერმინს "'''ეროსი'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[ეროსი]]
+|}</small>
+
 [[სურათი:Eros_-_Pompeiian_statue_-_Naples_Archeological_Museum.jpg|thumb|right|180px|ეროსი, პომპეუსის მარმარილო, ნეაპოლის არქეოლოგიური მუზეუმი]] '''ეროსი''' [[ბერძნული მითოლოგია|ბერძნულ მითოლოგიაში]] ვნების, სიყვარულისა და სექსის [[ღმერთი]] იყო; მასზე ასევე ლოცულობდნენ როგორც ნაყოფიერების ღვთაებაზე. მისი სახელი დაედო საფუძვლად სიტყვას “ეროტიული”. მისი [[რომაული მითოლოგია|რომაული]] ექვივალენტი იყო [[კუპიდონი]] (სურვილი), აცრ, ამური ([[სიყვარული]]). მას ხშირად [[აფროდიტა|აფროდიტას]] უკავშირებდნენ. [[დიონისე|დიონისეს]] მსგავსად მას ასევე ელევთერიოსად (მხსნელი) მოიხსენიებდნენ.
 
 
