*Empty MediaWiki Message*

--- a/ეროსი_(ფროიდი).mw
+++ b/ეროსი_(ფროიდი).mw
@@ -1,3 +1,7 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+||<small>ტერმინს "'''ეროსი'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[ეროსი]]
+|}</small>
 '''ეროსი''' [[ფროიდისეული ფსიქოლოგია|ფროიდისეულ ფსიქოლოგიაში]] ყველა ადამიანში არსებული ბუნებრივი ცხოვრების [[ინსტინქტი|ინსტინქტია]]. ეს არის ცხოვრების შექმნის სურვილი და ის პროდუქტიულობისა და აღმშენებლობის წამახალისებელი ძალაა. ეროსი ებრძვის [[თანატოსი|თანატოსის]] [[დესტრუქცია|დესტუქციულ]] მომაკვდინებელ ინსტინქტს. ამ სიტყვას ასევე მოიხსენიებენ ტერმინ “[[ლიბიდო]]”-სთან კავშირშიც.
 
 
