*Empty MediaWiki Message*

--- a/თამარ_მეფე.mw
+++ b/თამარ_მეფე.mw
@@ -3,8 +3,8 @@
 |<small>საკუთარ სახელს "'''თამარ'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[თამარ]]
 |}</small>
 
-[[სურათი:QueenTamar Vardziafresco.jpg|thumb|თამარი ვარძიის მონასტერში გამოხატულ ფრესკაზე]]
-'''თამარი''' (დაახ. [[1160]]-[[1213]], სხვა ცნობებით, [[1210]], [[1207]]), [[საქართველო|საქართველოს]] მეფე [[1184]]-იდან, [[გიორგი III|გიორგი III-ის]] ასული. გიორგი III-მ თანამოსაყდრედ აკურთხა. თამარს საქართველოს ოქროს ხანაში მოუწია მეფობა და უაღრესად წარმატებული მმართველის რეპუტაციით სარგებლობდა, რისთვისაც მას ქვეშევრდომებმა "მეფეთ მეფე და დედოფალთ დედოფალი აფხაზთა, ქართველთა, რანთა, კახთა და სომეხთა, შირვანთა და შაჰანშათა და მბრძანებელი ყოვლისა აღმოსავლეთისა და დასავლეთისა, დიდება ამა სამყაროსა და სარწმუნოებისა, მესიის მოვლენილი" შეარქვეს.
+[[სურათი:QueenTamar Vardziafresco.jpg|thumb|თამარი გამოსახული ვარძიის მონასტრის ერთ-ერთ ფრესკაზე]]
+'''თამარი''', '''თამარ მეფე''' (დაახ. *[[1160]] - [[1213]], შესაძლოა [[1210]] ან [[1207]]), [[საქართველო|საქართველოს]] მეფე [[1184]] წლიდან, [[გიორგი III|გიორგი III-ის]] ასული. გიორგი III-მ თანამოსაყდრედ აკურთხა საკუთარი მეფობის პერიოდში. თამარს საქართველოს ოქროს ხანაში მოუწია მეფობა და უაღრესად წარმატებული მმართველის რეპუტაციით სარგებლობდა, რისთვისაც მას ქვეშევრდომებმა "მეფეთ მეფე და დედოფალთ დედოფალი აფხაზთა, ქართველთა, რანთა, კახთა და სომეხთა, შირვანთა და შაჰანშათა და მბრძანებელი ყოვლისა აღმოსავლეთისა და დასავლეთისა, დიდება ამა სამყაროსა და სარწმუნოებისა, მესიის მოვლენილი" შეარქვეს.
 
 ==ცხოვრება==
 [[image:Tamar fresco at Betania Monastery, Georgia.jpg|thumb|left|თამარი ბეთანიის მონასტრის ფრესკაზე]]
@@ -12,24 +12,23 @@
 
 თამარის გამეფებისთანავე ფეოდალურმა არისტოკრატიამ დაიწყო ბრძოლა დაკარგული პოლიტიკური პრივილეგიების აღსადგენად. უპირველეს ყოვლისა მათ თამარი ხელახლა აკურთხეს მეფედ, რითაც ხაზი გაუსვეს თავიანთ უფლებებს. თამარი იძულებული გახდა ზოგი რამ დაეთმო: გადააყენა გიორგი III-ის მიერ აღზევებული უერთგულესი მოხელეები ამირსპასალარ-მანდატურთუხუცესი [[ყუბასარი]] და მსახურთუხუცესი [[აფრიდონი]]. ამის შემდეგ მეფის ხელისუფლების შეზღუდვის მოთხოვნით გამოვიდა მეჭურჭლეთუხუცეს [[ყუთლუ-არსლანი|ყუთლუ-არსლანის]] დასი. [[1185]] გავლენიან ფეოდალთა ერთმა ჯგუფმა თამარს მისი სურვილის წინააღმდეგ შერთო [[ანდრია ბოგოლიუბსკი|ანდრია ბოგოლიუბსკის]] შვილი იური (გიორგი). ორი-ორნახევრი წლის შემდეგ თამარი განქორწინდა და იური საქართველოდანაც განდევნეს. იურის მოწვევისა და შემდეგ განდევნის მიზეზი უნდა იყოს მეფისა და მისი მოწინააღმდეგე ფეოდალების დაჯგუფებათა ინტერესების დაპირისპირება და ის შინაკლასობრივი ბრძოლა, რომელიც თამარის მეფობის პირველ წლებში გამწვავდა. პირველ დამარცხებათა შემდეგ თამარმა თანდათან განიმტკიცა პოზიციები და მაღალ თანამდებობაზე თავისი მომხრეები დააწინაურა. დაახლოებით [[1189]] (ან [[1187]]) იქორწინა [[დავით სოსლანი|დავით სოსლანზე]], რომლისგანაც შეეძინა ორი შვილი - [[გიორგი IV ლაშა|ლაშა]] და [[რუსუდანი]].
 
-[[image:Georgia-Tamar.jpg|thumb|თამარ მეფე]]
 მეფის პოლიტიკით უკმაყოფილო ფეოდალებმა (მეჭურჭლეთუხუცესი ვარდან დადიანი, სამცხის სპასალარი ბოცო ჯაყელი, გუზან ტაოელი) [[1191]] აჯანყება მოაწყვეს და ბიზანტიაში მყოფი თამარის ქმარყოფილი იური საქართველოში შემოიყვანეს. თამარმა ჯერ მოლაპარაკებით სცადა საქმის მოგვარება, შემდეგ კი მათ წინააღმდეგ ლაშქარი გაგზავნა და აჯანყებულები დაამარცხა. იური ისევ გააძევეს, ხოლო მოღალატე ფეოდალთა თანამდებობაზე მეფემ თავისი მომხრეები დანიშნა. [[1193]] იურიმ რანის ათაბაგის დახმარებით ისევ სცადა ბედის შემობრუნება, მაგრამ ეს ცდაც უშედეგოდ დამთავრა.
 
 თამარმა დაამარცხა მეფის პოლიტიკით უკმაყოფილო დიდებული ფეოდალები, ოპოზიცია იძულებული გახდა დამორჩილებულიყო. მეფემ სასტიკად ჩაახშო სახელმწიფო ვალდებულებათა წინააღმდეგ მიმართული მთიელთა (ფხოველთა, დიდოელთა) აჯანყება (დაახლოებით [[1212]]), რომელიც 3 თვეს გაგრძელდა.
 
 ==საგარეო პოლიტიკა==
+[[image:Tamar of Georgia, Q'incvisi mural.jpg|thumb|თამარ მეფე ყინწვისის მონასტრის ფრესკაზე]]
 თამარის მეფობის პირველ პერიოდში, დაძაბული შინაკლასობრივი ბრძოლის ვითარებაში, საქართველო მხოლოდ მეზობელთა თავდასხმებს იგერიებდა და ფეოდალური სახელმწიფოსათვის ჩვეულებრივ წვრილ სასაზღვრო თარეშებს აწყობდა. XII საუკუნის 90-იანი წლებიდან საქართველომ ფართო ფრონტით შეუტია სელჩუკებს. მახლობელი აღმოსავლეთის მაჰმადიანი მფლობელები გაერთიანდნენ საქართველოს წინააღმდეგ საბრძოლველად და დახმარება სთხოვეს მაჰმადიანთა უზენაეს სასულიერო ხელისუფალს, ბაღდადის ხალიფას. [[1195]] [[შამქორის ბრძოლა 1195|შამქორთან ბრძოლაში]] ქართველებმა ბრწყინვალე გამარჯვება მოიპოვეს აზერბაიჯანელ ათაბაგ აბუბაქრისა და მისი მოკავშირეების ლაშქარზე, [[1203]] დაამარცხეს [[ბასიანის ბრძოლა 1203|რუმის სულთნის]] რუქნადინის ლაშქარი, [[1201]]-03 აიღეს სომხური ქალაქები ანისი და დვინი, რის შედეგადაც ჩრდილოეთ და ცენტრალური სომხეთი საქართველოს შემოუერთდა; [[1204]] აიღეს კარი (ყარსი), იმავე 1204 შეიქმნა [[ტრაპიზონის იმპერია]], რომელიც შემდეგ საქართველოს პოლიტიკური გავლენის ქვეშ იმყოფებოდა. [[1208]]-09 ქართველებმა ილაშქრეს ხლათზე, არჭემზე, არდებილზე, [[1210]] დალაშქრეს ჩრდილოეთ ირანი.
 
 თამარის მეფობის დასასრულისათვის საქართველოს ყმადნაფიცი ქვეყნები იყვნენ აღმოსავლეთით [[შირვანი]] და [[რანი]]; ჩრდილოეთით [[ქაშაგეთი]], [[ოსეთი]], [[დურძუკეთი]], [[დიდოეთი]], [[ღუნძეთი]], [[ლეკეთი]] და [[დარუბანდი]]. მოხარკე ქვეყნები სამხრეთით - ხლათის სასულთო, ერზინკის სასულთნო, კარნუ-ქალაქის (არზრუმის) საამირო, ნახჭევნის სააამირო. XII საუკუნის უკანასკნელ მეოთხედსა და XIII საუკუნის დასაწყისში ფეოდალურმა საქართველომ თავისი პოლიტიკური სიძლიერის, ეკონომიური და კულტურული აღმავლობის უმაღლეს საფეხურს მიაღწია.
 
 ==კულტურული აღმშენებლობა==
-თამარის მეფობაში საქართველოში ფართო მასშტაბის სამშენებლო სამუშაოები ჩატარდა (აშენდა გზები, ხიდები, ციხესიმაგრეები, სასახლეები, ეკლესია-მონასტრები). მის დროსაა აგებული ბერთუბნის, ბეთანიის მონასტრები, ვარძიის კლდეში ნაკვეთი სამონასტრო კომპლექსი და სხვები. თამარი მფარველობდა და მატერიალურ დახმარებას უწევდა ქართული კულტურის ცენტრებს ქვეყნის შიგნით და საზღვარგარეთ, მფარველობას უწევდა მეცნიერებს, პოეტებს, ხელოვანთ. თამარის პიროვნებას განსაკუთრებული ადგილი უკავია ფეოდალიზმის ხანის საქართველოს ისტორიაში. ქართულ ეკლესიამ თამარი წმინდად შერაცხა. 
+თამარის მეფობაში საქართველოში ფართო მასშტაბის სამშენებლო სამუშაოები ჩატარდა (აშენდა გზები, ხიდები, ციხესიმაგრეები, სასახლეები, ეკლესია-მონასტრები). მის დროსაა აგებული ბერთუბნის, [[ბეთანიის მონასტერი|ბეთანიის მონასტრები]], [[ვარძიის მონასტერი|ვარძიის]] კლდეში ნაკვეთი სამონასტრო კომპლექსი და სხვები. თამარი მფარველობდა და მატერიალურ დახმარებას უწევდა ქართული კულტურის ცენტრებს ქვეყნის შიგნით და საზღვარგარეთ, მფარველობას უწევდა მეცნიერებს, პოეტებს, ხელოვანთ. თამარის პიროვნებას განსაკუთრებული ადგილი უკავია ფეოდალიზმის ხანის საქართველოს ისტორიაში. ქართულ ეკლესიამ თამარი წმინდად შერაცხა. 
 
 ისტორიკოსები და პოეტები ხოტბას ასხამდნენ მას, ფუნჯის ოსტატები ხატავდნენ თამარს. თამარი იქცა ქართველი ხალხის სათაყვანებელ პიროვნებად. ძველი საქართველოს მოღვაწეებიდან ყველაზე მეტი პოემა, ლექსი და ლეგენდა თამარისადმია მიძღვნილი (მათ შორის ჩახრუხაძისა და შავთელის ოდები, [[შოთა რუსთაველი|შოთა რუსთაველის]] "ვეფხისტყაოსანი").
 
 ==თამარის საფლავი==
 ლეგენდის თანახმად თამარი უდიდესი განძითურთ საიდუმლო ადგილას უნდა იყოს დაკრძალული გელათის მონასტერში, ქუთაისთან, დასავლეთ საქართველოში. ქართველ მკვლევართა მოსაზრებით თამარი გელათის ერთ-ერთ ნიშაში უნდა იყოს დამარხული. მე-12 საუკუნის ლიტერატურული წყაროებიდან თამარ მეფეს უთქვამს: "ჩემთა წინაპართა მიწას, გელათის მონასტერს მიმაბარეთ მე...". მეორე ჰიპოთეზის თანახმად თამარი გელათის ახალ მონასტერში უნდა იყოს დაკრძალული. დღემდე მისი საფლავის მოკვლევა ვერ მოხერხდა.
-
 
 
 
