*Empty MediaWiki Message*

--- a/ეფთვიმე.mw
+++ b/ეფთვიმე.mw
@@ -1,7 +1,7 @@
 საკუთარი სახელი ''' ეფთვიმე''' შეიძლება აღნიშნავდეს ერთ-ერთ შემდეგ პიროვნებათაგანს:
 
 
-* [[ეფთვიმე, ევფემოს]] - საქართველოს კათალიკოს-პატრიარქი
+* [[ეფთვიმე (XIV ს.)]] - საქართველოს კათალიკოს-პატრიარქი
 * [[ეფთვიმე I]] - დასავლეთ საქართველოს კათალიკოს-პატრიარქი
 * [[ეფთვიმე II]] - დასავლეთ საქართველოს კათალიკოს-პატრიარქი
 * [[ეფთვიმე გენათელი]] - მიტროპოლიტი
