--- a/ექვთიმე_III.mw
+++ b/ექვთიმე_III.mw
@@ -1,8 +1,11 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''ეფთვიმე'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[ეფთვიმე]]
+|}</small>
+
 '''ეფთვიმე, ევფემოს''', [[საქართველო | საქართველოს]] [[კათოლიკოსი | კათოლიკოს-პატრიარქი]] XIV საუკუნის I ნახევარში. [[გიორგი V ბრწყინვალე | გიორგი ბრწყინვალესთან]] ერთად ენერგიულად შეუდგა მონღოლთა ბატონობის შედეგად დარღვეული სახელმწიფო წესრიგის აღდგენას, მონაწილეობდა საკანონმდებლო დარბაზის მუშაობაში, რომელმაც მთის მოსახლეობისათვის [["ძეგლის დადება მეფეთ-მეფის გიორგის მიერ" | კანონები]] შეიმუშავა. ეფთვიმე იღვწოდა მთიულეთ-ხევის მოსახლეობაში შერყეული ქრისტიანული-ზნეობრივი ნორმების მოსაწესრიგებლად. ზრუნავდა საზღვარგარეთის ქართული და არაქართული ქრისტიანული მონასტრების მატერიალური-მორალური მდგომარეობის ამაღლებაზე. [[1334]] ეფთვიმემ პალესტინის საბაწმინდის მონასტერს შეწირულება გაუგზავნა. დაახლოებით ამავე ხანებში დაეხმარა იერუსალიმის ჯვრის მონასტერს, რისთვისაც მას საუკუნო აღაპი დაუწესეს.
 
 
 
 [[კატეგორია:ქართველები]]
-
-
 [[კატეგორია:საქართველოს კათოლიკოსები]]
