*Empty MediaWiki Message*

--- a/ეფთვიმე_I.mw
+++ b/ეფთვიმე_I.mw
@@ -1,5 +1,9 @@
-'''ეფთვიმე I''' (გვარად საყვარელიძე), დასავლეთ [[საქართველო]]ს [[კათოლიკოს-პატრიარქი]] [[1578]]-[[1616]] წლებში. ადრე იყო მოქვის ეპისკოპოსი (მოქველი). ბიჭვინთის საკათოლიკოსო მამულს შეუძინა დიდძალი მოძრავი ქონება: თვალმარგალიტით შემკული, ძვირფალი ქსოვილებისაგან დამზადებული საპატრიარქო შესამოსლები, ოქრო-ვერცხლისაგან ნაკეთები სარიტუალო ინვენტარი, მდიდრულად მოკაზმული საეკლესიო წიგნები, "ქართლის ცხოვრება", მის მიერვე გადაწერილი "გულანი" და სხვა. ამასთან, თავისი პირადი ქონებაც ეკლესიის საკუთრებად აქცია. 
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''ეფთვიმე'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[ეფთვიმე]]
+|}</small>
+
+'''ეფთვიმე I''' (გვარად ''საყვარელიძე''), დასავლეთ [[საქართველო]]ს [[კათოლიკოს-პატრიარქი]] [[1578]]-[[1616]] წლებში. ადრე იყო მოქვის ეპისკოპოსი (მოქველი). ბიჭვინთის საკათოლიკოსო მამულს შეუძინა დიდძალი მოძრავი ქონება: თვალმარგალიტით შემკული, ძვირფალი ქსოვილებისაგან დამზადებული საპატრიარქო შესამოსლები, ოქრო-ვერცხლისაგან ნაკეთები სარიტუალო ინვენტარი, მდიდრულად მოკაზმული საეკლესიო წიგნები, "ქართლის ცხოვრება", მის მიერვე გადაწერილი "გულანი" და სხვა. ამასთან, თავისი პირადი ქონებაც ეკლესიის საკუთრებად აქცია. 
 
 [[კატეგორია:ქართველები]]
-
 [[კატეგორია:საქართველოს კათოლიკოსები]]
