--- a/ეფთვიმე_II.mw
+++ b/ეფთვიმე_II.mw
@@ -1,7 +1,11 @@
-'''ეფთვიმე II''' (გვარად საყვარელიძე), დასავლეთ [[საქართველო]]ს [[კათოლიკოს-პატრიარქი]] [[1669]]-[[1673]] წლებში. იმერეთის სამეფოს თავკაცთა შორის იხსენიება [[1669]] წერილში, რომელიც ბაგრატ III-მ გაუგზავნა [[რუსეთი]]ს მეფეს ალექსი მიხეილის ძეს.
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''ეფთვიმე'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[ეფთვიმე]]
+|}</small>
+
+'''ეფთვიმე II''' (გვარად ''საყვარელიძე''), დასავლეთ [[საქართველო]]ს [[კათოლიკოს-პატრიარქი]] [[1669]]-[[1673]] წლებში. იმერეთის სამეფოს თავკაცთა შორის იხსენიება [[1669]] წერილში, რომელიც ბაგრატ III-მ გაუგზავნა [[რუსეთი]]ს მეფეს ალექსი მიხეილის ძეს.
 
 
 
 [[კატეგორია:ქართველები]]
-
 [[კატეგორია:საქართველოს კათოლიკოსები]]
