*Empty MediaWiki Message*

--- a/ეფთვიმე_გენათელი.mw
+++ b/ეფთვიმე_გენათელი.mw
@@ -1,3 +1,8 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''ეფთვიმე'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[ეფთვიმე]]
+|}</small>
+
 '''ეფთვიმე გენათელი''' (გვარად ''შერვაშიძე''), ( †  [[1822]]), [[მიტროპოლიტი]] [[1776]]-[[1820]], ადრე ეკავა [[ჯუმათის საეპისკოპოსო]]. 
 
 იბრძოდა ცენტრალური სამეფო ხელისუფლების გაძლიერებისა და ქვეყნის გაერთიანებისათვის. [[1789]] იმერეთის საერო და საეკლესიო თავკაცებთან ერთად ურჩევდა [[ერეკლე II|ერეკლე II-ს]] თავისი ხელისუფლების ქვეშ გაეერთიანებინა [[ქართლ-კახეთის სამეფო|ქართლ-კახეთისა]] და [[იმერეთის სამეფო|იმერეთის]] სამეფოები.  
