*Empty MediaWiki Message*

--- a/ცნობილი_ქართველები:_ე.mw
+++ b/ცნობილი_ქართველები:_ე.mw
@@ -90,7 +90,7 @@
 ==ეტ==
 * [[ეტიფანე]]- საქართველოს კათოლიკოს-პატრიარქი
 ==ეფ==
-* [[ეფთვიმე, ევფემოს]] - საქართველოს კათოლიკოს-პატრიარქი
+* [[ეფთვიმე (XIV ს.)]] - საქართველოს კათოლიკოს-პატრიარქი
 * [[ეფთვიმე I]] - დასავლეთ საქართველოს კათოლიკოს-პატრიარქი
 * [[ეფთვიმე II]] - დასავლეთ საქართველოს კათოლიკოს-პატრიარქი
 * [[ეფთვიმე გენათელი]] - მიტროპოლიტი
