--- a/თამარ_მეფე.mw
+++ b/თამარ_მეფე.mw
@@ -34,7 +34,7 @@
 {| align="center" cellpadding="2" border="2"
 |-
 | width="30%" align="center" | ტახტზე შეცვალა:<br>'''[[გიორგი III]]'''
-| width="40%" align="center" | '''[[საქართველოს მეფეთა სია|საქართველოს დედოფალი]]'''
+| width="40%" align="center" | '''[[საქართველოს მეფეთა სია|საქართველოს მეფე]]'''
 | width="30%" align="center" | ტახტის მემკვიდრე:<br>'''[[გიორგი IV ლაშა|ლაშა-გიორგი]]'''
 |}
 
