+tr, ro, no, ar

--- a/ჰომოფობია.mw
+++ b/ჰომოფობია.mw
@@ -22,9 +22,10 @@
 
 
 [[კატეგორია:ტერმინები]]
+[[კატეგორია:ნეოლოგიზმები]]
 [[კატეგორია:დისკრიმინაცია]]
 
-
+[[ar:هوموفوبيا]]
 [[bg:Хомофобия]]
 [[da:Homofobi]]
 [[de:Heterosexismus]]
@@ -34,9 +35,12 @@
 [[it:Omofobia]]
 [[he:הומופוביה]]
 [[nl:Homofobie]]
+[[no:Homofobi]]
 [[pl:Homofobia]]
 [[pt:Homofobia]]
+[[ro:Homofobie]]
 [[ru:Гомофобия]]
 [[fi:Homofobia]]
 [[sv:Homofobi]]
+[[tr:Homofobi]]
 [[zh:同性恋恐惧症]]
