*Empty MediaWiki Message*

--- a/თამარ_მეფე.mw
+++ b/თამარ_მეფე.mw
@@ -4,11 +4,11 @@
 |}</small>
 
 [[სურათი:QueenTamar Vardziafresco.jpg|thumb|თამარი გამოსახული ვარძიის მონასტრის ერთ-ერთ ფრესკაზე]]
-'''თამარი''', '''თამარ მეფე''' (დაახ. *[[1160]] - [[1213]], შესაძლოა [[1210]] ან [[1207]]), [[საქართველო|საქართველოს]] [[მონარქი]] [[1184]] წლიდან, [[გიორგი III|გიორგი III-ის]] ასული, [[ბაგრატიონი (დინასტია)|ბაგრატიონთა]] გვარის ჩამომავალი. გიორგი III-მ თანამოსაყდრედ აკურთხა საკუთარი მეფობის პერიოდში. თამარს საქართველოს ოქროს ხანაში მოუწია მეფობა და უაღრესად წარმატებული მმართველის რეპუტაციით სარგებლობდა, რისთვისაც მას ქვეშევრდომებმა "მეფეთ მეფე და დედოფალთ დედოფალი აფხაზთა, ქართველთა, რანთა, კახთა და სომეხთა, შირვანთა და შაჰანშათა და მბრძანებელი ყოვლისა აღმოსავლეთისა და დასავლეთისა, დიდება ამა სამყაროსა და სარწმუნოებისა, მესიის მოვლენილი" შეარქვეს.
+'''თამარი''', '''თამარ მეფე''' (დაახ. *[[1160]] - [[1213]], შესაძლოა [[1210]] ან [[1207]]), [[საქართველო|საქართველოს]] [[მონარქი]] [[1184]] წლიდან, [[გიორგი III|გიორგი III-ის]] ასული, [[ბაგრატიონი (დინასტია)|ბაგრატიონთა]] გვარის ჩამომავალი. თამარს საქართველოს ოქროს ხანაში მოუწია მეფობა და უაღრესად წარმატებული მმართველის რეპუტაციით სარგებლობდა, რისთვისაც მას ქვეშევრდომებმა "მეფეთ მეფე და დედოფალთ დედოფალი აფხაზთა, ქართველთა, რანთა, კახთა და სომეხთა, შირვანთა და შაჰანშათა და მბრძანებელი ყოვლისა აღმოსავლეთისა და დასავლეთისა, დიდება ამა სამყაროსა და სარწმუნოებისა, მესიის მოვლენილი" შეარქვეს.
 
 ==ცხოვრება==
 [[image:Tamar fresco at Betania Monastery, Georgia.jpg|thumb|left|თამარი ბეთანიის მონასტრის ფრესკაზე]]
-თამარი მეფე გიორგი III-ისა და მისი მეუღლის გურანდუხტის უფროსი ქალიშვილი იყო. გურანდუხტი თავის მხრივ ოსთა მეფე ხუდანის ქალიშვილი გახლდათ. მეფე გიორგიმ თამარი თანამოსაყუდრედ გამოაცხადა მისი გარდაცვალების შემდეგ უთანხმოებებისგან თავის ასარიდებლად. [[1184]]-იდან, მამის გარდაცვალების შემდეგ, ერთმმართველი გახდა. 
+თამარი მეფე გიორგი III-ისა და მისი მეუღლის გურანდუხტის უფროსი ქალიშვილი იყო. გურანდუხტი თავის მხრივ ოსთა მეფე ხუდანის ქალიშვილი გახლდათ. მეფე გიორგიმ თამარი თანამოსაყუდრედ გამოაცხადა მისი გარდაცვალების შემდეგ უთანხმოებების წარმოქმნისგან თავის ასარიდებლად. [[1184]]-იდან, მამის გარდაცვალების შემდეგ, ერთმმართველი გახდა. 
 
 თამარის გამეფებისთანავე ფეოდალურმა არისტოკრატიამ დაიწყო ბრძოლა დაკარგული პოლიტიკური პრივილეგიების აღსადგენად. უპირველეს ყოვლისა მათ თამარი ხელახლა აკურთხეს მეფედ, რითაც ხაზი გაუსვეს თავიანთ უფლებებს. თამარი იძულებული გახდა ზოგი რამ დაეთმო: გადააყენა გიორგი III-ის მიერ აღზევებული უერთგულესი მოხელეები ამირსპასალარ-მანდატურთუხუცესი [[ყუბასარი]] და მსახურთუხუცესი [[აფრიდონი]]. ამის შემდეგ მეფის ხელისუფლების შეზღუდვის მოთხოვნით გამოვიდა მეჭურჭლეთუხუცეს [[ყუთლუ-არსლანი|ყუთლუ-არსლანის]] დასი. [[1185]] გავლენიან ფეოდალთა ერთმა ჯგუფმა თამარს მისი სურვილის წინააღმდეგ შერთო [[ანდრია ბოგოლიუბსკი|ანდრია ბოგოლიუბსკის]] შვილი იური (გიორგი). ორი-ორნახევრი წლის შემდეგ თამარი განქორწინდა და იური საქართველოდანაც განდევნეს. იურის მოწვევისა და შემდეგ განდევნის მიზეზი უნდა იყოს მეფისა და მისი მოწინააღმდეგე ფეოდალების დაჯგუფებათა ინტერესების დაპირისპირება და ის შინაკლასობრივი ბრძოლა, რომელიც თამარის მეფობის პირველ წლებში გამწვავდა. პირველ დამარცხებათა შემდეგ თამარმა თანდათან განიმტკიცა პოზიციები და მაღალ თანამდებობაზე თავისი მომხრეები დააწინაურა. დაახლოებით [[1189]] (ან [[1187]]) იქორწინა [[დავით სოსლანი|დავით სოსლანზე]], რომლისგანაც შეეძინა ორი შვილი - [[გიორგი IV ლაშა|ლაშა]] და [[რუსუდანი]].
 
