*Empty MediaWiki Message*

--- a/ნახიჩევანის_ავტონომიური_რესპუბლიკა.mw
+++ b/ნახიჩევანის_ავტონომიური_რესპუბლიკა.mw
@@ -1,4 +1,4 @@
-ავტონომიური რესპუბლიკა [[აზერბაიჯანი|აზერბაიჯანის]] შემადგენლობაში, ტერიტორიული ანკლავი. დასავლეთით მისი მოსაზღვრეა [[თურქეთი]], ჩრდილოეთით და აღმოსავლეთით - [[სომხეთი]], სამხრეთით - [[ირანი]].  ფართობი - 5,5 ათასი კვ.კმ. ნახჭევანის ტერიტორიაზე მიედინება მდინარე [[არაქსი]]. მოსახლეობა - 370 ათასი; ძირითადად აზერბაიჯანელები, რუსები. ადმინისტრაციულად იყოფა 6 რაიონად. რესპუბლიკაში 4 ქალაქია, დედაქალაქი - [[ნახჭევანი (ქალაქი)|ნახჭევანი]]. 
+'''ნახჭევანი''' (აზერბ. Naxçıvan Muxtar Respublikası) [[ავტონომიური რესპუბლიკა]] [[აზერბაიჯანი|აზერბაიჯანის]] შემადგენლობაში, ტერიტორიული [[ანკლავი]]. დასავლეთით მისი მოსაზღვრეა [[თურქეთი]], ჩრდილოეთით და აღმოსავლეთით - [[სომხეთი]], სამხრეთით - [[ირანი]].  ფართობი - 5,5 ათასი კვ.კმ. ნახჭევანის ტერიტორიაზე მიედინება მდინარე [[არაქსი]]. მოსახლეობა - 370 ათასი; ძირითადად აზერბაიჯანელები, რუსები. ადმინისტრაციულად იყოფა 6 რაიონად. რესპუბლიკაში 4 ქალაქია, დედაქალაქი - [[ნახჭევანი (ქალაქი)|ნახჭევანი]]. 
 
 
 *1828 – შევიდა [[რუსეთი|რუსეთის]] შემადგენლობაში. 
