*Empty MediaWiki Message*

--- a/ეფრემ_II_(კათოლიკოს-პატრიარქი).mw
+++ b/ეფრემ_II_(კათოლიკოს-პატრიარქი).mw
@@ -1,4 +1,9 @@
-მისი უწმიდესობა და უნეტარესობა '''ეფრემ II''' (ერისკაცობაში გრიგოლ შიოს ძე სიდამონიძე) (* [[19 ოქტომბერი]], [[1896]] ―    †[[7 აპრილი]], [[1972]]), ცნობილი [[ქართველები|ქართველი]] სასულიერო და საზოგადო მოღვაწე, [[საქართველო |სრულიად საქართველოს]] [[კათოლიკოსი | კათოლიკოს-პატრიარქი]] და [[მცხეთა]]-[[თბილისი]]ს მთავარეპისკოპოსი [[1960]]-[[1972]] წლებში. [[1918]] დაამთავრა [[თბილისი]]ს სასულიერო სემინარია, [[1925]] - [[თბილისის სახელმწიფო უნივერსიტეტი]]ს სიბრძნისმეტყველების ფაკულტეტის სიტყვიერების განყოფილება. [[1922]] აღიკვეცა ბერად. [[1927]]-იდან იყო [[ნიკორწმინდა|ნიკორწმინდის]] ეპისკოპოსი. [[1944]]-იდან ეკავა [[ქუთაისი|ქუთაის]]-გაენათის კათედრა. [[1946]]-იდან მიტროპოლიტი. [[1952]]-იდან განაგებდა [[ბათუმი|ბათუმ]]-შემოქმედისა და [[ჭყონდიდი]]ს ეპარქიებს. [[1960]]-იდან სრულიად საქართველოს კათოლიკოს-პატრიარქი და მცხეთა-თბილისის მთავარეპისკოპოსი. იყო მსოფლიო საეკლესიო საბჭოს წევრი. მინიჭებული ჰქონდა ღვთისმეტყველების დოქტორის სამეცნიერო ხარისხი. ეკუთვნის ნაშრომები ქართული მართლმადიდებელი სამოციქულო ეკლესიის ისტორიის დარგში. დაკრძალულია თბილისში, სიონის საკათედრო ტაძარში.
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''ეფრემ'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[ეფრემ]]
+|}</small>
+
+მისი უწმიდესობა და უნეტარესობა '''ეფრემ II''' (ერისკაცობაში ''გრიგოლ შიოს ძე სიდამონიძე'') (* [[19 ოქტომბერი]], [[1896]] ―    † [[7 აპრილი]], [[1972]]), ცნობილი [[ქართველები|ქართველი]] სასულიერო და საზოგადო მოღვაწე, [[საქართველო |სრულიად საქართველოს]] [[კათოლიკოსი | კათოლიკოს-პატრიარქი]] და [[მცხეთა]]-[[თბილისი]]ს მთავარეპისკოპოსი [[1960]]-[[1972]] წლებში. [[1918]] დაამთავრა [[თბილისი]]ს სასულიერო სემინარია, [[1925]] - [[თბილისის სახელმწიფო უნივერსიტეტი]]ს სიბრძნისმეტყველების ფაკულტეტის სიტყვიერების განყოფილება. [[1922]] აღიკვეცა ბერად. [[1927]]-იდან იყო [[ნიკორწმინდა|ნიკორწმინდის]] ეპისკოპოსი. [[1944]]-იდან ეკავა [[ქუთაისი|ქუთაის]]-გაენათის კათედრა. [[1946]]-იდან მიტროპოლიტი. [[1952]]-იდან განაგებდა [[ბათუმი|ბათუმ]]-შემოქმედისა და [[ჭყონდიდი]]ს ეპარქიებს. [[1960]]-იდან სრულიად საქართველოს კათოლიკოს-პატრიარქი და მცხეთა-თბილისის მთავარეპისკოპოსი. იყო მსოფლიო საეკლესიო საბჭოს წევრი. მინიჭებული ჰქონდა ღვთისმეტყველების დოქტორის სამეცნიერო ხარისხი. ეკუთვნის ნაშრომები ქართული მართლმადიდებელი სამოციქულო ეკლესიის ისტორიის დარგში. დაკრძალულია თბილისში, სიონის საკათედრო ტაძარში.
 
 
 
