--- a/გიორგი_III_(საქართველოს_მეფე).mw
+++ b/გიორგი_III_(საქართველოს_მეფე).mw
@@ -1,12 +1,31 @@
-'''გიორგი III''' (―  †  [[1184]]), [[საქართველო|საქართველოს]] მეფე [[1156]]-იდან, [[დემეტრე I|დემეტრე I-ის]] ძე. მამამ იგი ჯერ თანამოსაყდრედ გამოაცხადა (უფროსი ძმის [[დავით V|დავით V-ის]] გარდაცვალებისა და სამეფო ხელისუფლების სათავეში დაბრუნების შემდგომ), მერე კი თავის სიცოცხლეშივე გაამეფა. ასეთი ღონისძოება აუცილებელი იყო, რადგანაც დიდგვაროვან ფეოდალებს დავით V-ის ძის ([[დემნა უფლისწული|დემნა]], იგივე დემეტრე) სახით ჰყავდათ ტახტის პრეტენდენტი ცენტრალური ხელისუფლების წინააღმდეგ საბრძოლველად.
 [[image:Georgia-Giorgi III.jpg|thumb|right|გიორგი III]]
-გიორგი III, [[დავით აღმაშენებელი|დავით აღმაშენებლის]] მსგავსად, აქტიურ საშინაო და საგარეო პოლიტიკას ატარებდა. მისი მეთაურობით ქართველები განაგრძობდნენ ბრძოლას [[თურქები|თურქ]]-[[სელჩუკები|სელჩუკების]] წინააღმდეგ. საქართველოს საზღვრების შესამტკიცებლად [[1161]] გიორგი III-მ [[ანისი|ანისზე]] გაილაშქრა, ქალაქი აიღო და მისი მართვა-გამგეობა ამირსპასალ [[ორბელი, ივანე სუმბატის ძე|ივანე ორბელს]] მიანდო, თანაშემწედ სარგის მხარგრძელი დაუნიშნა. [[1162]] ქართველებმა [[სომხეთი|სომხეთის]] ძველი დედაქალაქი [[დვინი]] აიღეს.
+'''გიორგი III''' (? ―  † [[1184]]), [[საქართველო|საქართველოს]] მეფე [[1156]]-იდან, [[დემეტრე I|დემეტრე I-ის]] ძე.  მისი მეფობის პერიოდი, თამართან ერთდ საქართველოს ისტორიაში ოქროს ხანად მოიხსენიება. ეს იყო იმპერიის, დიპლომატიური წარმატების, სამხედრო ტრიუმფისა, განათლების, კულტურის, სულიერი და ხელოვნების აყვავების ერა საქართველოში. მისი სრული წოდება იყო "უზენაესი მეფე გიორგი, ღვთის ნებით, მეფეთ მეფე აფხაზთა, ქართველთა, რანთა, კახთა და სომეხთა, შირვანშათა და შაჰანშათა და მბრძანებელი ყოვლისა აღმოსავლეთისა და დასავლეთისა".
+
+==გამეფება==
+მამამ გიორგი III ჯერ თანამოსაყდრედ გამოაცხადა (უფროსი ძმის [[დავით V|დავით V-ის]] გარდაცვალებისა და სამეფო ხელისუფლების სათავეში დაბრუნების შემდგომ), მოგვიანებით კი საკუთარ სიცოცხლეშივე გაამეფა. ასეთი ღონისძოება აუცილებელი იყო, რადგანაც დიდგვაროვან ფეოდალებს დავით V-ის ძის ([[დემნა უფლისწული|დემნა]], იგივე დემეტრე) სახით ჰყავდათ ტახტის პრეტენდენტი ცენტრალური ხელისუფლების წინააღმდეგ საბრძოლველად.
+
+==საგარეო პოლიტიკა==
+[[დავით აღმაშენებელი|დავით აღმაშენებლის]] მსგავსად, გიორგი III აქტიურ საშინაო და საგარეო პოლიტიკას ატარებდა. მისი მეთაურობით ქართველები განაგრძობდნენ ბრძოლას [[თურქები|თურქ]]-[[სელჩუკები|სელჩუკების]] წინააღმდეგ. საქართველოს საზღვრების გასამტკიცებლად [[1161]] გიორგი III-მ [[ანისი|ანისზე]] გაილაშქრა, ქალაქი აიღო და მისი მართვა-გამგეობა ამირსპასალარ [[ორბელი, ივანე სუმბატის ძე|ივანე ორბელს]] მიანდო, ხოლო თანაშემწედ [[სარგის მხარგრძელი]] დაუნიშნა. [[1162]] ქართველებმა [[სომხეთი|სომხეთის]] ძველი დედაქალაქი [[დვინი]] აიღეს.
 
 საქართველოს ასეთმა აქტიურობამ მაჰმადიანთა ამირები აიძულა ქართველებისათვის შეერთებული ძალით შემოეტიათ. საქართველოსაკენ დაიძრნენ [[ხლათი|ხლათის]], [[დიარბაქირი|დიარბაქირისა]] და[[არზუმი| არზუმის]] მმართველები. გიორგი III-მ ქართველ-სომეხთა შეერთებული ლაშქრით უკუაგდო დამპყრობლები. მაჰმადიანთა უკან დახევა გიორგი III-მ და საქართველოს ლაშქრის მეთაურებმა საბოლოო გამარჯვებად მიიჩნიეს და სიფხიზლე მოადუნეს. ამით ისარგებლეს მოწინააღმდეგეებმა, საქართველოს ლაშქრის დაზვერვა მოახერხეს და მოულოდნელად შეუტიეს ანისს. ქართველებმა სათანადო წინააღმდეგობა ვერ გაუწიეს. ბრძოლა გაჭიანურდა. ბოლოს, დადებული ზავის თანახმად, ანისის მაჰმადიანი მმართველი საქართველოს მეფის ყმადნაფიცი გახდა. [[1167]] გიორგი III-მ ილაშქრა [[შირვანი|შირვანში]] მისი ყმადნაფიცისა და დისწულის აღსართან (ახსითან) შირვანშაჰის დასახმარებლად (შირვანშაჰს [[დარუბანდი|დარუბანდის]] მხრიდან თავს ესხმოდნენ იმიერკავკასიის მფლობელები). ქართველთა მხედრობა მივიდა დარუბანდის კარამდე, აიღო ქ. [[შაბურანი]], რომელიც გიორგი III-მ აღსართანს უწყალობა. 1173-იდან გიორგი III-ის მცდელობის შედეგად [[გვინი]], ანისი და მათი მიმდგომი მხარეები საქართველოს სახელმწიფოს შეუერთდა, თუმცა ბრძოლა ამ მხარეებისათვის შემდეგშიაც გრძელდებოდა.
 
+==შინა მდგომარეობა==
 გიორგი III-ის დროს საქართველოში განსაკუთრებით გამრავლდნენ ფეოდალურო წარმოებიდან გამოძევებული ე. წ. გლახაკნი და მეკობრენი. ლაშქარში შეიქმნა ქონების შეძენის მიზნით უცხო ქვეყნების ბოლომოუღებელი რბევისადმი მიდრეკილება, ქვეყანაში გახშირდა ღალატი და გარეშე დამპყრობელთა მხარეზე გადასვლა. განსაკუთრებით თავგამოდებით ებრძოდნენ ცენტრალური სამეფო ხელისუფლებას დიდგვაროვანი აზნაურები. [[1177]] დაიწყო დიდი ამბოხება ამირსპასალარ ივანე ორბელის მეთაურობით. მას გვერდში ედგნენ დიდგვაროვანი ფეოდალები: ივანე ვარდანის ძე, შოთა, ძე ართავაჩოს ძისა, [[ქავთარ ივანეს ძე|ქავთარ ივანეს ძე ]] და სხვები. ამბოხებულები თითქოსდა დემნა (დემეტრე) უფლისწულის ინტერესებს იცავდნენ, სინამდვილეში კი სამეფო ხელისუფლების შეზღუდვისა და თავიანთი უფლებების გაფართოებისათვის იბრძოდნენ. აჯანყება რამდენიმე თვეს გაგრძელდა. [[1178]] დასაწყისში გიორგი III-მ შეძლო მისი ჩახშობა. იგი განსაკუთრებით სასტიკად მოეპყრო აჯანყების მოთავეებს - ორბელები სიკვდილით დასაჯეს, დემეტრე უფლისწულს თვალები დასთხარეს და დაასაჭურისეს. გიორგი III-მ ორბელთა მამულები თავის ერთგულებს უწყალობა, მ. შ. დიდი ნაწილი [[ყუბასარი|ყუბასარს]], რომელიც მეფემ ორბელთა სამთავრო პატივში აიყვანა და საქართველოს ამირსპასალარად დანიშნა. გიორგი III-მ ასევე "უგვარო", აზნაურის ნაყმევი [[აფრიდონი]] მსახურთუხუცესის თანამდებობაზე დააწინაურა.
 
 ორბელთა ამბოხების ჩაქრობის შემდეგ გიორგი III იძულებული გახდა დაეთმო რეაქციონერი სასულიერო პირებისათვის და ეკლესიის შეუვალობის აღდგენის მოთხოვნა დაეკმაყოფილებინა. [[1179]] მეფემ მეკობრეობის წინააღმდეგ გამოსცა სახელმწიფო დარბაზის მიერ შემუშავებული კანონი, რომელიც ამ "სენის" აღმოსაფხვრელად მკაცრ ზომებს ითვალისწინებდა. ორბელთა ამბოხების ჩახშობისთანავე, [[1178]] გიორგი III-მ საქართველოს სამეფო ტახტზე აიყვანა თავისი ქალი [[თამარი]]. მამა-შვილის ერთობლივი მეფობა გიორგი III-ის გარდაცვალებამდე გაგრძელდა.
+
+==ქორწინება და შვილები==
+დაახ. 1155 წელს გიორგი ირთავს ბურდუხანს (გურანდუხტი), ოსეთის მეფის ხუდანის ქალიშვილი. მათი უფროსი ქალიშვილი [[თამარი]] გიორგის შემდეგ ტახტის მემკვიდრე ხდება. უმცროსი ქალიშვილი, [[რუსუდანი]], მიჰყვება მანუელ კომნენუსს (ბიზანტიის ხანმოკლე იმპერატორის ანდრონიკუსის უფროსი ვაჟი). რუსუდანი და მანუელი იყვნენ ტრაპიზონის მეფის ალექსიუს I-ის მშობლები.
+
+
+{| align="center" cellpadding="2" border="2"
+|-
+| width="30%" align="center" | ტახტზე შეცვალა:<br>'''[[დემეტრე I]]'''
+| width="40%" align="center" | '''[[ქართველ მეფეთა სია|საქართველოს მეფე]]'''
+| width="30%" align="center" | ტახტის მემკვიდრე:<br>'''[[თამარი]]'''
+|}
+
+
 
 [[კატეგორია:ქართველები]]
 [[კატეგორია:საქართველოს მეფეები]]
