*Empty MediaWiki Message*

--- a/ზუთხისებრნი.mw
+++ b/ზუთხისებრნი.mw
@@ -1,11 +1,11 @@
 [[სურათი:Sturgeon2.jpg|thumb|ზუთხისებრნი]]
 '''ზუთხისებრნი''' (Acipenseridae), [[თევზები|თევზების]] ოჯახი [[ხრტილიანი განოიდები|ხრტილიანი განოიდების]] ჯგუფისა. აქვთ მეტ-ნაკლებად წაგრძელებული [[დინგი]]. უკბილოები არიან, პირთან 4 ულვაში აქვთ. შიგა ჩონჩხი ხრტილოვანია, შერჩეულია ქორდა, მალები არა აქვთ. სხეულზე ფარეკლების 5 მწკვრივია, რომელთა შორია ძვლოვანი მარცვლები და ფირფიტრბია განლაგებული. ზუთხისებრნთა  შორის ყველაზე დიდები (მაგ., [[სვია]]) სიგრძით 9 მ-მდე აღწევენ. ოჯახში 4 გვარის 23 სახეობაა. გავრცელებული არიან ევროპაში, ჩრდილოეთ აზიისა და ჩრდილოეთ ამერიკის წყლებში. ზუთხისებრნი მხოლოდ მტკნარ წყალში მრავლდებიან. ტოფობენ გაზაფხულზე და ზაფხულში. ზუთხისებრნთა ნაწილი მტკნარი წყლის ბინადარია, ნაწილი კი ნახევრად გამსვლელი ან გამსვლელი. იკვებებიან ფსკერის უხერხემლოებით, გვხვდებიან მტაცებლებიც. ძვირფასი სარეწაო თევზია, მსოფლიო ნათევზავების უდიდესი ნაწილი ყოფილ სსრკ-ს ეკუთვნის. ინტენსიური რეწვის გამო ზოგი გამსვლელი ზუთხისებრნის რიცხვი ძლიერ შემცირდა.
 საქართველოს წყლებში გავრცელებული სახეობები.
-[['''ფორეჯი''' ]](Acipenser nudiventris)
+[[ფორეჯი]](Acipenser nudiventris)
 ბინადრობს შავ და კასპიის ზღვებში და მათ შენაკად მდინარეებში. სადაც ქვირიტის დასაყრელად შედის.
-[['''ტარღანა''' ]](Acipenser stellatus)
+[[ტარღანა]](Acipenser stellatus)
 კასპიის ზღვაში (შედის რიონში, ჭოროხში)
-[['''ცქვრინი''' ]](Acipenser ruthenus)
+[[ცქვრინი]](Acipenser ruthenus)
 
 
 [[კატეგორია:ხრტილიანი განოიდები]]
