*Empty MediaWiki Message*

--- a/გიორგი_III_(საქართველოს_მეფე).mw
+++ b/გიორგი_III_(საქართველოს_მეფე).mw
@@ -1,5 +1,5 @@
 [[image:Georgia-Giorgi III.jpg|thumb|right|გიორგი III]]
-'''გიორგი III''' (? ―  † [[1184]]), [[საქართველო|საქართველოს]] მეფე [[1156]]-იდან, [[დემეტრე I|დემეტრე I-ის]] ძე.  მისი მეფობის პერიოდი, თამართან ერთდ საქართველოს ისტორიაში ოქროს ხანად მოიხსენიება. ეს იყო იმპერიის, დიპლომატიური წარმატების, სამხედრო ტრიუმფისა, განათლების, კულტურის, სულიერი და ხელოვნების აყვავების ერა საქართველოში. მისი სრული წოდება იყო "უზენაესი მეფე გიორგი, ღვთის ნებით, მეფეთ მეფე აფხაზთა, ქართველთა, რანთა, კახთა და სომეხთა, შირვანშათა და შაჰანშათა და მბრძანებელი ყოვლისა აღმოსავლეთისა და დასავლეთისა".
+'''გიორგი III''' (? ―  † [[1184]]), [[საქართველო|საქართველოს]] მეფე [[1156]] წლიდან, [[დემეტრე I|დემეტრე I-ის]] ძე, [[ბაგრატიონი (დინასტია)|ბაგრატიონთა]] გვარის ჩამომავალი. მისი მეფობის პერიოდი, [[თამარი|თამართან]] ერთად საქართველოს ისტორიაში ოქროს ხანად მოიხსენიება. ეს იყო იმპერიის, დიპლომატიური წარმატების, სამხედრო ტრიუმფისა, განათლების, კულტურის, სულიერი და ხელოვნების აყვავების ერა საქართველოში. მისი სრული წოდება იყო "უდიდებულესი მეფე გიორგი, ღვთის ნებით, მეფეთ მეფე აფხაზთა, ქართველთა, რანთა, კახთა და სომეხთა, შირვანშათა და შაჰანშათა და მბრძანებელი ყოვლისა აღმოსავლეთისა და დასავლეთისა".
 
 ==გამეფება==
 მამამ გიორგი III ჯერ თანამოსაყდრედ გამოაცხადა (უფროსი ძმის [[დავით V|დავით V-ის]] გარდაცვალებისა და სამეფო ხელისუფლების სათავეში დაბრუნების შემდგომ), მოგვიანებით კი საკუთარ სიცოცხლეშივე გაამეფა. ასეთი ღონისძოება აუცილებელი იყო, რადგანაც დიდგვაროვან ფეოდალებს დავით V-ის ძის ([[დემნა უფლისწული|დემნა]], იგივე დემეტრე) სახით ჰყავდათ ტახტის პრეტენდენტი ცენტრალური ხელისუფლების წინააღმდეგ საბრძოლველად.
