--- a/დემეტრე_I.mw
+++ b/დემეტრე_I.mw
@@ -9,6 +9,13 @@
 
 საყურადღებოა დემეტრე I-ის პოეტური შემოქმედება. ჩვენამდე მოაღწია მისმა რამდენიმე იამბიკომ. განსაკუთრებით გამოირჩევა ღვთისმშობლისადმი მიძღვნილი იამბიკოები. დემეტრე I-ის თხზულებათა პოეტური სახეები ქრისტიანულ სიმბოლიკაზეა დაფუძნებული, ზოგ მათგანს რითმაც ეტყობა. მისი "შენ ხარ ვენახი" დღესაც ცოცხალი პოეტური საგალობელია.
 
+{| align="center" cellpadding="2" border="2"
+|-
+| width="30%" align="center" | ტახტზე შეცვალა:<br>'''[[დავით აღმაშენებელი|დავით IV]]'''
+| width="40%" align="center" | '''[[საქართველოს მეფეები|საქართველოს მეფე]]'''
+| width="30%" align="center" | ტახტის მემკვიდრე:<br>'''[[დავით V]]''' ([[1154]]), ''' [[გიორგი III, საქართველოს მეფე|გიორგი III]] ''' ([[1155]]) 
+|}
+
 [[კატეგორია:ქართველები]]
 [[კატეგორია:საქართველოს მეფეები]]
 [[ca:Demetri I de Geòrgia]]
