--- a/დემეტრე_I.mw
+++ b/დემეტრე_I.mw
@@ -3,11 +3,13 @@
 |<small>საკუთარ სახელს "'''დემეტრე'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[დემეტრე]]
 |}</small>
 
-'''დემეტრე I''', [[საქართველო|საქართველოს]] მეფე [[1125]]-[[1156]], [[დავით აღმაშენებელი|დავით აღმაშენებლის]] მემკვიდრე. მამის სიცოცხლეშივე აქტიურად მონაწილეობდა სახელმწიფოს მართვა-გამგეობაში. დიდგორისა და შირვანის ბრძოლებში ქართველთა ლაშქრის გამარჯვების ერთ-ერთი ორგანიზატორი იყო. დავით აღმაშენებლის გარდაცვალების შემდეგ იძულებული გახდა [[ანისი]] ყმადნაფიცობის პირობით [[თურქები|თურქებისათვის]] დაეთმო. [[1138]] დემეტრე I-ის სარდლობით [[ქართველები|ქართველებმა]] [[განძა]] აიღეს და გამარჯვების ნიშნად ქალაქის კარი საქართველოში მოიტანეს (დაცულია [[გელათი|გელათში]]), მაგრამ დემეტრე I-მა ვერ შეძლო განძის შენარჩუნება და ქალაქი დიდხანს დარჩა მაჰმადიანთა საყრდენ პუნქტად საქართველოს წინააღმდეგ ბრძოლაში.
+'''დემეტრე I''', [[საქართველო|საქართველოს]] მეფე [[1125]]-[[1156]], [[დავით აღმაშენებელი|დავით აღმაშენებლის]] მემკვიდრე. მამის სიცოცხლეშივე აქტიურად მონაწილეობდა სახელმწიფოს მართვა-გამგეობაში. [[დიდგორის ომი|დიდგორისა]] და [[შირვანის ომი|შირვანის]] ბრძოლებში ქართველთა ლაშქრის გამარჯვების ერთ-ერთი ორგანიზატორი იყო. დავით აღმაშენებლის გარდაცვალების შემდეგ იძულებული გახდა [[ანისი]] ყმადნაფიცობის პირობით [[თურქები|თურქებისათვის]] დაეთმო. [[1138]] დემეტრე I-ის სარდლობით [[ქართველები|ქართველებმა]] [[განძა]] აიღეს და გამარჯვების ნიშნად ქალაქის კარი საქართველოში მოიტანეს (დაცულია [[გელათი|გელათში]]), მაგრამ დემეტრე I-მა ვერ შეძლო განძის შენარჩუნება და ქალაქი დიდხანს დარჩა მაჰმადიანთა საყრდენ პუნქტად საქართველოს წინააღმდეგ ბრძოლაში.
 
-[[1130]] დემეტრე I-ის უფროსმა შვილმა [[დავით V|დავითმა]] იმის შიშით, რომ დემეტრე I-ს უმცროსი შვილი [[გიორგი III|გიორგი]] არ გაემეფებინა, შეთქმულება მოაწყო მეფის წინააღმდეგ. მეფემ შეიპყრო შეთქმულების მოთავეები დავით დემეტრეს ძე და [[აბულეთისძე, ივანე|იოანე აბულეთისძე]]. შემდგომში (სომეხი მემატიანის ვარდანის ცნობით [[1132]], ლაშა-გიორგის დროინდელი მემატიანის ცნობით [[1145]]) დემეტრე I-მა [[აბულეთისძე, ივანე| ივანე აბულეთისძე]] მოაკვლევინა, ხოლო მისი შვილი თირქაში (ქირქიში) საპყრობილეში დაამწყვდია. [[1154]] ([[1155]]) დავითმა კვლავ მოაწყო შეთქმულება, თავისი ერთგული და მეფის მოწინააღმდეგე დიდებულების შემწეობით დემეტრე I იძულებით ბერად შეაყენა და სამეფო ტახტი თვითონ დაიკავა. დავითის გარდაცვალების შემდეგ (იგი მხოლოდ 6 თვეს მეფობდა) დემეტრე I-მა ბერის ჩოხა გაიხადა და ტახტი დაიბრუნა. თანაც შეამზადა პირობები მისი უმცროსი ძის გასამეფებლად ("აღამაღლა, თავისი თანა და ძისა სწორად მოსაყდრედ გამოაჩინა"). მწვავე შინაკლასობრივი ბრძოლების გამო დემეტრე I-ის მეფობის დროს საქართველოს პოლიტიკური ზრდა ერთგვარად შეფერხდა.
+[[1130]] დემეტრე I-ის უფროსმა შვილმა [[დავით V|დავითმა]] იმის შიშით, რომ დემეტრე I-ს უმცროსი შვილი [[გიორგი III|გიორგი]] არ გაემეფებინა, შეთქმულება მოაწყო მეფის წინააღმდეგ. მეფემ შეიპყრო შეთქმულების მოთავეები დავით დემეტრეს ძე და [[აბულეთისძე, ივანე|იოანე აბულეთისძე]]. შემდგომში (სომეხი მემატიანის ვარდანის ცნობით [[1132]], ლაშა-გიორგის დროინდელი მემატიანის ცნობით [[1145]]) დემეტრე I-მა [[აბულეთისძე, ივანე| ივანე აბულეთისძე]] მოაკვლევინა, ხოლო მისი შვილი თირქაში (ქირქიში) საპყრობილეში დაამწყვდია. [[1154]] ([[1155]]) დავითმა კვლავ მოაწყო შეთქმულება, თავისი ერთგული და მეფის მოწინააღმდეგე დიდებულების შემწეობით დემეტრე I იძულებით ბერად შეაყენა და სამეფო ტახტი თვითონ დაიკავა. დავითის გარდაცვალების შემდეგ (იგი მხოლოდ 6 თვეს მეფობდა) დემეტრე I-მა ბერობიდან გადადგა და ტახტი დაიბრუნა. თანაც შეამზადა პირობები მისი უმცროსი ძის გასამეფებლად ("აღამაღლა, თავისი თანა და ძისა სწორად მოსაყდრედ გამოაჩინა"). მწვავე შინაკლასობრივი ბრძოლების გამო დემეტრე I-ის მეფობის დროს საქართველოს პოლიტიკური ზრდა ერთგვარად შეფერხდა.
 
-საყურადღებოა დემეტრე I-ის პოეტური შემოქმედება. ჩვენამდე მოაღწია მისმა რამდენიმე იამბიკომ. განსაკუთრებით გამოირჩევა ღვთისმშობლისადმი მიძღვნილი იამბიკოები. დემეტრე I-ის თხზულებათა პოეტური სახეები ქრისტიანულ სიმბოლიკაზეა დაფუძნებული, ზოგ მათგანს რითმაც ეტყობა. მისი "შენ ხარ ვენახი" დღესაც ცოცხალი პოეტური საგალობელია.
+საყურადღებოა დემეტრე I-ის პოეტური შემოქმედება. ჩვენამდე მოაღწია მისმა რამდენიმე [[იამბიკო|იამბიკომ]]. განსაკუთრებით გამოირჩევა ღვთისმშობლისადმი მიძღვნილი იამბიკოები. დემეტრე I-ის თხზულებათა პოეტური სახეები ქრისტიანულ სიმბოლიკაზეა დაფუძნებული, ზოგ მათგანს რითმაც ეტყობა. მისი "შენ ხარ ვენახი" დღესაც ცოცხალი პოეტური საგალობელია.
+
+
 
 {| align="center" cellpadding="2" border="2"
 |-
