*Empty MediaWiki Message*

--- a/დავით_IV_აღმაშენებელი.mw
+++ b/დავით_IV_აღმაშენებელი.mw
@@ -3,11 +3,11 @@
 |<small>საკუთარ სახელს "''' დავით'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[დავით]]
 |}</small>
 
-[[სურათი:David the Builder.jpg|thumb|250px|right|დავით IV აღმაშენებელი]]
-'''დავით IV აღმაშენებელი''' (* [[1073]] ― † [[24 იანვარი]]. [[1125]]), [[საქართველო|საქართველოს]] მეფე [[1089]]-1125, [[გიორგი II, საქართველოს მეფე|გიორგი II]]-ის ძე.
+[[სურათი:Georgia-DavidIV.jpg|thumb|220px|right|[[გელათის მონასტერი|გელათის მონასტრის]] ფრესკაზე გამოსახული დავით აღმაშენებელი ხელში საკუთარი ანდერძითა და ტაძრის მაკეტით]]
+'''დავით IV აღმაშენებელი''' (* [[1073]] ― † [[24 იანვარი]]. [[1125]]), [[საქართველო|საქართველოს]] მეფე [[1089]]-1125, [[გიორგი II, საქართველოს მეფე|გიორგი II]]-ის ძე, [[ბაგრატიონი (დინასტია)|ბაგრატიონთა]] გვარის ჩამომავალი. უდაოდ ყველაზე წარმატებული ქართველი მონარქი, მოახერხა თურქ-სელჩუკთა ქვეყნიდან განდევნდა 1121 წელს [[დიდგორის ომი|დიდგორის ომში]]  მნიშვნელოვანი გამარჯვებით. მის მიერ არმიაში და მმართველობის სისტემაში გატარებულმა რეფორმებმა შესაძლებლობა მისცა ქვეყანა გაეერთიანებინა და მთელი კავკასიის მიწების საქართველოს დაქვემდებარებაში შემოეყვანა. ქრისტიანული კულტურის წამხალისებელი და თავად თავდადებული ქრისტიანი საქართველოს მართლმადიდებლური ეკლესიის მიერ წმინდანად არის შერაცხული.
 
 ==გამეფება==
-16 წლისა გამეფდა. მემკვიდრეობად ერგო თურქ-სელჩუკებისაგან დარბეული ქვეყანა, დაცარიელებული ქალაქები და სოფლები, მთებში გახიზნული დამშეული მოსახლეობა. დავით IV-მ დაიწყო ყმა-მოლაშქრეთა და მსახურეულ აზნაურთაგან მხედართა რაზმების შექმნა. ერთგული რაზმებით მეფე თავს ესხმოდა თურქ-სელჩუკებს, ავიწროვებდა მათ, სდევნიდა და მთაში გახიზნულ მოსახლეობას ბარად ჩამოსვლის პირობებს უქმნიდა.
+დავითი 16 წლისა გამეფდა. მემკვიდრეობად ერგო თურქ-სელჩუკებისაგან დარბეული ქვეყანა, დაცარიელებული ქალაქები და სოფლები, მთებში გახიზნული დამშეული მოსახლეობა. დავით IV-მ დაიწყო ყმა-მოლაშქრეთა და მსახურეულ აზნაურთაგან მხედართა რაზმების შექმნა. ერთგული რაზმებით მეფე თავს ესხმოდა თურქ-სელჩუკებს, ავიწროვებდა მათ, სდევნიდა და მთაში გახიზნულ მოსახლეობას ბარად ჩამოსვლის პირობებს უქმნიდა.
 
 დავით IV ებრძოდა სახელმწიფოს ცენტრალიზაციის მოწინააღმდეგე დიდგვარიან ფეოდალებს. [[1093]] მან შეიპყრო გამდგარი ლიპარიტ ბაღვაში, მონანიების შემდეგ გაათავისუფლა და ძველი ღირსებებიც დაუტოვა, მაგრამ როცა დარწმუნდა მის ხელახალ ღალატში, 1094 კვლავ შეიპყრო და ორი წლის პატიმრობის შემდეგ საქართველოდან გააძევა. [[1103]] ლიპარტის ძის რატის გარდაცვალების შემდეგ დავით IV-მ გააუქმა [[კლდეკარის საერისთავო]] და ბაღვაშთა მამულები სამეფო დომენად გახადა, შემდგომში ნაწილი (არგვეთი) [[გელათის მონასტერი|გელათის მონასტერს]] გადასცა. ამავე წელს დაამარცხა სამეფო კარის მოწინააღმდეგე ფეოდალები ― ძაგან და მოდისტოს აბულეთისძეები.
 
@@ -37,6 +37,14 @@
 დავით IV-მ თავისი წვლილი შეიტანა ქართული ჰიმნოგრაფიის განვითარებაშიც. მას ეკუთვნის ორიგინალური პოეტური ნაწარმოები "[[გალობანი სინანულისანი]]", რომელშიც შუა საუკუნეების ქართული კულტურის იდეოლოგიური და ესთეტიკური მრწამსის გამოხატულებაა. იგი ეძღვნება სასულიერო ლირიკაში ღრმად დამუშავებულ ([[ეფრემ ასური|ეფრემ ასურის]], იოსებ და თეოდორე სტუდიტეების, [[ანდრია კრეტელი|ანდრია კრეტელის]], იოანე დამასკელის და სხვათა საგალობლები) სინანულის მოტივს. საგალობელში გადმოცემულია ზოგადსაკაცობრიო სევდა. დავით IV თავს ადარებს უმძიმესი ცოდვის ჩამდენთ და გამოთქვამს აზრს, რომ არ არსებობს დანაშაული, რომელიც მის სულს არ ამძიმებდეს. თავის ასეთ დამდაბლებაში ვლინდება ზნესრული ადამიანის მაღალი ეთიკური მრწამსი. დავით IV-ის საგალობელში შეცოდებათა შეგნებით უკვე დაძლეულია ცოდვა და ადამიანის დაცემით გამოწვეულ სევდას ახლავს ნათელი ტონები ადამიანის სრულქმნის ღრმა რწმენისა. "გალობანი სინანულისანი"  ქართული ლირიკის შედევრთა რიგში შეიძლება დავაყენოთ, რადგან მასში ავტორის ინდივიდუალური განცდა ამაღლებულია ზოგადსაკაცობრიო ტკივილამდე და მეფის ღაღადი თავის ცოდვილ ბუნებაზე საზ. რეზონანს იძენს.
 
 დავით IV-ის ეპოქა იყო მწვავე კლასობრივი და შინაკლასობრივი ბრძოლების ხანა. ქვეყნის სიძლიერისა და ცენტრალიზაციის შენარჩუნებას მეფე შინაკლასობრივი მტრების (ცენტრალიზაციის მოწინააღმდეგე დიდგვარიანები) დათრგუნვისა და მოსახლეობის ექსპლუატაციის ხარჯზე ახერხებდა. მთელი მისი მოღვაწეობა ემსახურებოდა ფეოდალური საქართველოს გაძლიერება-ცენტრალიზაციას.
+
+
+{| align="center" cellpadding="2" border="2"
+|-
+| width="30%" align="center" | ტახტზე შეცვალა:<br>'''[[გიორგი II]]'''
+| width="40%" align="center" | '''[[საქართველოს მეფეები]]''' [[1089]]-[[1125]]
+| width="30%" align="center" | ტახტის მემკვიდრე:<br>'''[[დემეტრე I]]'''
+|}
 
 [[კატეგორია:ქართველები]]
 [[კატეგორია:საქართველოს მეფეები]]
