*Empty MediaWiki Message*

--- a/დავით_IV_აღმაშენებელი.mw
+++ b/დავით_IV_აღმაშენებელი.mw
@@ -3,7 +3,7 @@
 |<small>საკუთარ სახელს "''' დავით'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[დავით]]
 |}</small>
 
-[[სურათი:Georgia-DavidIV.jpg|thumb|220px|right|[[გელათის მონასტერი|გელათის მონასტრის]] ფრესკაზე გამოსახული დავით აღმაშენებელი ხელში საკუთარი ანდერძითა და ტაძრის მაკეტით]]
+[[სურათი:DavidIVbuilder.jpg|thumb|220px|right|[[გელათის მონასტერი|გელათის მონასტრის]] ფრესკაზე გამოსახული დავით აღმაშენებელი ხელში საკუთარი ანდერძითა და ტაძრის მაკეტით.]]
 '''დავით IV აღმაშენებელი''' (* [[1073]] ― † [[24 იანვარი]]. [[1125]]), [[საქართველო|საქართველოს]] მეფე [[1089]]-1125, [[გიორგი II, საქართველოს მეფე|გიორგი II]]-ის ძე, [[ბაგრატიონი (დინასტია)|ბაგრატიონთა]] გვარის ჩამომავალი. უდაოდ ყველაზე წარმატებული ქართველი მონარქი, მოახერხა თურქ-სელჩუკთა ქვეყნიდან განდევნდა 1121 წელს [[დიდგორის ომი|დიდგორის ომში]]  მნიშვნელოვანი გამარჯვებით. მის მიერ არმიაში და მმართველობის სისტემაში გატარებულმა რეფორმებმა შესაძლებლობა მისცა ქვეყანა გაეერთიანებინა და მთელი კავკასიის მიწების საქართველოს დაქვემდებარებაში შემოეყვანა. ქრისტიანული კულტურის წამხალისებელი და თავად თავდადებული ქრისტიანი საქართველოს მართლმადიდებლური ეკლესიის მიერ წმინდანად არის შერაცხული.
 
 ==გამეფება==
