--- a/16_მარტი.mw
+++ b/16_მარტი.mw
@@ -2,9 +2,16 @@
 
 
 ==დღის მოვლენები==
-
-*[[1079]] : ირანში შემოიღეს მუსულმანური კალენდარი.
-
+*[[1079]] : [[ირანი|ირანში]] შემოიღეს მუსულმანური კალენდარი.
+*[[1190]] : [[ჯვაროსნები]] იწყებენ იორკის ებრაელთა ხოცვას.
+*[[1521]] : [[მაგელენი, ფერდინანდ|ფერდინანდ მაგელანი]] ფილიპინებს აღწევს.
+*[[1935]] : [[ჰიტლერი, ადოლფ|ჰიტლერი]] არღვევს [[ვერსალის ზავი|ვერსალის ზავს]] და შეიარაღებას იწყებს. [[ვერმახტი|ვერმახტის შექმნა]].
+*[[1939]] : [[პრაღის ციხე-კოშკი|პრაღის ციხე-კოშკიდან]] ჰიტლერი ბოჰემიასა და მორავიას გერმანელთა პროტექტორატებად აცხადებს.
+*[[1945]] : ბრიტანეთის ავიადამშენები 20 წუთში ანადგურებენ ვიურცბურგის (გერმანია) 90%-ს; დაღუპულია 5.000 ადამიანი.
+*[[1963]] : მთა აგუნგის ვულკანი (ბალი) იღვიძებს, შედეგად 11.000 ადამიანი იღუპება.
+*[[2001]] : ერთადერთი დღე დიდი ბრიტანეთში თვითმკვლელობის გარეშე 1993-2002 წლებში, ჯანდაცვის კვლევის მონაცემებით.
+*[[2005]] : [[ისრაელი]] ოფიციალურად გადასცემს [[ჯერიხო|ჯერიხოს]] [[პალესტინა|პალესტინას]].
+*[[2006]] : [[გაეროს გენერალური ასამბლეა]] ერთსულოვნად მხარს უჭერს [[გაეროს ადამიანის უფლებათა დაცვის საბჭო|გაეროს ადამიანის უფლებათა დაცვის საბჭოს]] შექმნას.
 
 ==ამ დღეს დაბადებულნი==
 
