--- a/მარიანო_ასუელა.mw
+++ b/მარიანო_ასუელა.mw
@@ -10,6 +10,7 @@
 
 [[de:Mariano Azuela]]
 [[en:Mariano Azuela]]
+[[eo:Mariano Azuela]]
 [[es:Mariano Azuela]]
 [[it:Mariano Azuela]]
 [[pt:Mariano Azuela]]
