--- a/16_მარტი.mw
+++ b/16_მარტი.mw
@@ -4,7 +4,7 @@
 ==დღის მოვლენები==
 *[[1079]] : [[ირანი|ირანში]] შემოიღეს მუსულმანური კალენდარი.
 *[[1190]] : [[ჯვაროსნები]] იწყებენ იორკის ებრაელთა ხოცვას.
-*[[1521]] : [[მაგელენი, ფერდინანდ|ფერდინანდ მაგელანი]] ფილიპინებს აღწევს.
+*[[1521]] : [[მაგელანი, ფერდინანდ|ფერდინანდ მაგელანი]] ფილიპინებს აღწევს.
 *[[1935]] : [[ჰიტლერი, ადოლფ|ჰიტლერი]] არღვევს [[ვერსალის ზავი|ვერსალის ზავს]] და შეიარაღებას იწყებს. [[ვერმახტი|ვერმახტის შექმნა]].
 *[[1939]] : [[პრაღის ციხე-კოშკი|პრაღის ციხე-კოშკიდან]] ჰიტლერი ბოჰემიასა და მორავიას გერმანელთა პროტექტორატებად აცხადებს.
 *[[1945]] : ბრიტანეთის ავიადამშენები 20 წუთში ანადგურებენ ვიურცბურგის (გერმანია) 90%-ს; დაღუპულია 5.000 ადამიანი.
