*Empty MediaWiki Message*

--- a/გაბრიელ_საგინაშვილი.mw
+++ b/გაბრიელ_საგინაშვილი.mw
@@ -1,6 +1,6 @@
 '''გაბრიელ საგინაშვილი''', XVII საუკუნის დასასრულსა და XVIII საუკუნის დასაწყისში ქართველი კალიგრაფი. [[დავითგარეჯა|დავითგარეჯის]] ბერი. მოღვაწეობდა ნათლისმცემლის მონასტერში. 
 
-გაბრიელს, როგორც ფრიად განსწავლულ კალიგრაფს, კარგად იცნობდნენ მეფის კარზე. წიგნებს [[ვახტანგ VI|ვახტანგ VI-ის]] ბრძანებითაც წერდა. [[1704]]-[[1713]] [[დომენტი]] კათოლიკოსის თაოსნობით გაბრიელმა გადაწერა პირველი ქართული ჰაგიოგრაფიული კრებული - ქართველი წმინდანების ცხოვრებათა კრებული ([[საქართველოს მეცნიერებათა აკადემია]], [[ხელნაწერთა ინსტიტუტი]], A-130 და მისივე ნაწილი - H-1557). საყურადღებოა [[1707]] გადაწერილი კონდაკი (საქართველოს მეცნიერებათა აკადემია, ხელნაწერთა ინსტიტუტი, A-624). [[1719]] წლით თარიღდება მისივე გადაწერილი ოთხტავი (საქართველოს მეცნიერებათა აკადემია, ხელნაწერთა ინსტიტუტი, Q-85) და "საქმე მოციქულთა" (საქართველოს მეცნიერებათა აკადემია, ხელნაწერთა ინსტიტუტი, Q-86).
+გაბრიელს, როგორც ფრიად განსწავლულ კალიგრაფს, კარგად იცნობდნენ მეფის კარზე. წიგნებს [[ვახტანგ VI|ვახტანგ VI-ის]] ბრძანებითაც წერდა. [[1704]]-[[1713]] [[დომენტი IV|დომენტი]] კათოლიკოსის თაოსნობით გაბრიელმა გადაწერა პირველი ქართული ჰაგიოგრაფიული კრებული - ქართველი წმინდანების ცხოვრებათა კრებული ([[საქართველოს მეცნიერებათა აკადემია]], [[ხელნაწერთა ინსტიტუტი]], A-130 და მისივე ნაწილი - H-1557). საყურადღებოა [[1707]] გადაწერილი კონდაკი (საქართველოს მეცნიერებათა აკადემია, ხელნაწერთა ინსტიტუტი, A-624). [[1719]] წლით თარიღდება მისივე გადაწერილი ოთხტავი (საქართველოს მეცნიერებათა აკადემია, ხელნაწერთა ინსტიტუტი, Q-85) და "საქმე მოციქულთა" (საქართველოს მეცნიერებათა აკადემია, ხელნაწერთა ინსტიტუტი, Q-86).
 
 საგინაშვილის წიგნები ნაწერია [[ნუსხური|ნუსხურით]], ძლიერ დახრილი, გადაბმული, სქელხაზიანი, "წვეტიანი" და თითქოს ცოტა მიჭყლეტილი ასოებით. A-624-ს ზოგიერთი სათაური შესრულებულია ოქროთი ნაწერი დიდი ჩართული [[მთავრული]] ასოებით. Q-85-ში ჩართულია მახარებელთა სურათები რუსული წარწერებით, ბაროკულ ჩარჩოებში. ეს ერთ-ერთი ნიმუშია იმხანად ევროპული მოტივების შემოჟონვისა ქართულ ხელოვნებაში.
 
