*Empty MediaWiki Message*

--- a/ვალენსიის_ავტონომიური_გაერთიანება.mw
+++ b/ვალენსიის_ავტონომიური_გაერთიანება.mw
@@ -1,3 +1,8 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''ვალენსია'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[ვალენსია]]
+|}</small>
+
 [[Image:Locator map of Valenciana.png|frame|right|ავტონომიური რეგიონი ვალენსია]]
 '''ვალენსია''' (Comunitat Valenciana) არის [[ესპანეთი|ესპანეთის]] ავტონომიური რეგიონი 1982 წლიდან. მოიცავს პროვინციებს – [[ალიკანტე]], [[კასტელონ-დე-ლა-პლანა]], [[ვალენსია (პროვინცია)|ვალენსია]].
 
