*Empty MediaWiki Message*

--- a/ვალენსია_(მრავალმნიშვნელოვანი).mw
+++ b/ვალენსია_(მრავალმნიშვნელოვანი).mw
@@ -1,4 +1,5 @@
-ტერმინი '''ვალენსია''' შეიძლება აღნიშნავდეს სხვადასხვა გეოგრაფიულ ობიექტს მსოფლიოს სხვადასხვა ნაწილში:
+საკუთარი სახელი '''ვალენსია''' შეიძლება აღნიშნავდეს:
+
 
 
 *[[ვალენსია (ქალაქი)]] – ქალაქი ესპანეთში;
