--- a/ვამეყ_I_დადიანი.mw
+++ b/ვამეყ_I_დადიანი.mw
@@ -1,3 +1,8 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''ვამეყ'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[ვამეყ]]
+|}</small>
+
 '''ვამეყ I დადიანი''', [[ოდიში | ოდიშის]] ერისთავი [[1384]]-[[1396]], ჰქონდა მანდატურთუხუცესის ტიტული. ერთიანი საქართველოს მეფეებთან ერთად ებრძოდა განკერძოების მოსურნე იმერეთის ერისთავებს. [[1392]] დაამარცხა იმერეთის ერისთავი [[გიორგი I, ბაგრატ I-ის ძე | გიორგი I]], რომელიც ამ ბრძოლაში დაიღუპა. ვამეყ I დადიანის დახმარებით საქართველოს მეფემ [[გიორგი VII, ბაგრატ V-ის ძე | გიორგი VII-მ]], [[თემურლენგი | თემურლენგის]] შემოსევათა მიუხედავად, თავისი ძალაუფლება განამტკიცა დასავლეთ საქართველოში. ვამეყ I დადიანმა წარმატებით ილაშქრა ჯიქეთში და იქიდან წამოღებული მარმარილოს სვეტებითა და ფიქლებით ხობის ეკლესიას თავისი მშობლების საძვალე მიაშენა. მისივე თაოსნობით მოხატეს წალენჯიხის ეკლესია.  
 
 
