*Empty MediaWiki Message*

--- a/ვარაზ-ბაკური.mw
+++ b/ვარაზ-ბაკური.mw
@@ -1,3 +1,8 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "''' ვარაზ'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[ ვარაზ]]
+|}</small>
+
 '''ვარაზ-ბაკური''', ''ვარაზ-ბაქარი'', [[ქართლის სამეფო | ქართლის]] [[მეფე]] IV საუკუნის II ნახევარში. ჩვეულებრივ აიგივებენ [[ამიანე მარცელინუსი | ამიანე მარცელინუსთან]] მოხსენიებულ [[ასფაგური | ასფაგურთან]], რომელიც [[368]] რომაელთა მომხრე [[საურმაგი | საურმაგის]] განდევნის შემდეგ გაამეფეს [[ირანელები | ირანელებმა]]. [[370]] ვარაზ-ბაკური იძულებული გახდა დაებრუნებინა საურმაგისათვის მტკვრის სამხრეთით მდებარე ქართლის ნაწილი. 70-იანი წლების ბოლოს ვარაზ-ბაკურმა ირანელთა დახმარებით ისევ გააერთიანა ქართლი. ქართლის წყაროების თანახმად, ვარაზ-ბაკურის დროს ირანელებმა პირველად დახარკეს ქართლი. მის დროსვე პირველად იხსენიება [[თბილისი]].
 
 
