*Empty MediaWiki Message*

--- a/ვარაზ_გაგელი.mw
+++ b/ვარაზ_გაგელი.mw
@@ -1,3 +1,8 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "''' ვარაზ'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[ ვარაზ]]
+|}</small>
+
 '''ვარაზ გაგელი''', გარდაბნის მთავარი VII საუკუნის I ნახევარში. მოხსენიებულია [[სუმბატ დავითის ძე | სუმბატ დავითის ძის]] თხზულებაში [[ჰერაკლე კეისრის ლაშქრობები | ჰერაკლე კეისრის საქართველოში ლაშქრობასთან]] დაკავშირებით.
 
 
