--- a/ვარაზვარდი.mw
+++ b/ვარაზვარდი.mw
@@ -1,3 +1,8 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "''' ვარაზ'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[ ვარაზ]]
+|}</small>
+
 '''ვარაზვარდი''', [[კამბეჩოვანი | კამბეჩოვანის]] მთავარი VI საუკუნის II ნახევარში. [[სუმბატ დავითის ძე | სუმბატ დავითის ძის]] თხზულების მიხედვით, ბაგრატიონთა საგვარეულოს ერთ-ერთი შტოს წარმომადგენელი. ვარაზვარდმა და მისმა ძმამ [[ასამი (მთავარი) | ასამმა]] ისარგებლეს ირანელთა ბატონობით გამოწვეული  უკმაყოფილებით, [[შაჰი | შაჰის]] ირანელ მოხელეს [[ვეზან ხორნაბუჯელი | ვეზან ხორნაბუჯელს]] აუჯანყეს კამბეჩოვანის მოსახლეობა, დაიპყრეს კამბეჩოვანი და თვით გამთავრდნენ.
 
 
