--- a/ავთო_ვარაზი.mw
+++ b/ავთო_ვარაზი.mw
@@ -1,3 +1,8 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "''' ვარაზ'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[ ვარაზ]]
+|}</small>
+
 '''ვარაზი''' (''ვარაზაშვილი''), '''ავთანდილ''' ვასილის ძე (* [[25 ოქტომბერი]], [[1926]], [[თბილისი]]  ―       † [[4 მარტი]], [[1977]], თბილისი), საბჭოთა ეპოქის [[ქართველები | ქართველი]] ფერმწერი, საქართველოს დამსახურებული მხატვარი ([[1967]]). დაამთავრა თბილისის პოლიტექნიკური ინსტიტუტის არქიტექტურის ფაკულტეტი ([[1952]]). ძირითადად მუშაობდა პორტრეტისა და ნატურმორტის ჟანრში. ვარაზის ფსიქოლოგიური პორტრეტები გამსჭვალულია ადამიანისადმი ღრმა თანაგრძნობით("ბუკინისტი", [[1968]]; თვითნასწავლი მხატვრის ვ. რურუას პორტრეტი, [[1964]] და სხვ; ყველა მხატვრის კუთვნილება). ვარაზის ნატურმორტებისათვის დამახასიათებელია მონოქრომიზმი, კომპოზიციის სისადავე, საგნებისა და სივრცის ორგანიზებული ერთიანობა ("მსხლები", [[1973]]; "ნატურმორტი ლიმონით", [[1973]]; "ყურძენი და ქილა", [[1972]]. ყველა მხატვრის კუთვნილება). [[1966]]-[[1967]] საქართველოს ისტორიის მუზეუმში ვარაზმა მაღალმხატვრულად, ორიგინალურად გააფორმა არქეოლოგიური გათხრების შედეგად მოპოვებული ნივთების ექსპოზიცია. მხატვრულად გააფორმა აგრეთვე კინოფილმი "ფიროსმანი", სადაც, [[ფიროსმანი | ფიროსმანის]] როლი მანვე შეასრულა ([[1970]]).
 
 
