*Empty MediaWiki Message*

--- a/ვაჩე_(ქართლის_მეფე).mw
+++ b/ვაჩე_(ქართლის_მეფე).mw
@@ -1,1 +1,6 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''ვაჩე'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[ვაჩე]]
+|}</small>
+
 '''ვაჩე''', [[ლეონტი მროველი|ლეონტი მროველის]] მიხედვით, ქართლის მე-20 ([[მოქცევაჲ ქართლისაჲ|"მოქცევაჲ ქართლისაჲს"]] მიხედვით - 22-ე) მეფე, რევის ძე, დაახლოებით მე-3 საუკუნის 70-იან თუ 80-იან წლებში.
