*Empty MediaWiki Message*

--- a/ვაჩე_(კახეთის_მთავარი).mw
+++ b/ვაჩე_(კახეთის_მთავარი).mw
@@ -1,3 +1,7 @@
+{|border=0 cellpadding=10 width=100%
+|- bgcolor=whitesmoke
+|<small>საკუთარ სახელს "'''ვაჩე'''" აქვს სხვა მნიშვნელობებიც. იხილეთ: [[ვაჩე]]
+|}</small>
 '''ვაჩე''', კახეთის მთავარი ([[ქორეპისკოპოსი]]) [[827]]-[[839]], გარდაბნელთა ტომიდან. ვაჩე უნდა იყოს [[მატიანე ქართლისა|"მატიანე ქართლისაჲში"]] მოხსენიებული დაჩი ქორეპისკოპოსი (იოვანე ქვაბულის ძის შვილი). ამ დროს კახეთის სამთავროში გარკვეული უპირატესობა მოიპოვა გარდაბნელთა ტომმა. 
 
 [[827]], კახეთის მთავრის [[გრიგოლი (VIII ს.)|გრიგოლის]] გარდაცვალების შემდეგ, მათ შეთქმულება მოაწყვეს, ხელში ჩაიგდეს კახეთ-კუხეთ-გარდაბნის ხელისუფლება და ვაჩე გაამთავრეს.
